--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,16 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
-
 :root {
   --main-color: #0b0b0b;
-}
-
-* {
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
-  padding: 0;
 }
 
 .link {
   color: inherit;
   text-decoration: none;
+}
+
+@mixin tablet {
+  @media (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mobile {
+  @media (max-width: 480px) {
+    @content;
+  }
 }
